--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <button class="calc-button">&larr;</button>
           <button class="calc-button">&divide;</button>
         </div>
-        
+
         <div class="calc-button-row">
           <button class="calc-button">7</button>
           <button class="calc-button">8</button>
@@ -40,5 +40,6 @@
         </div>
       </section>
     </div>
+    <script src="/calc.js"></script>
   </body>
 </html>
